--- a/README.mdx
+++ b/README.mdx
@@ -1,5 +1,6 @@
 import { Meta, Markdown } from '@storybook/addon-docs/blocks';
 import GETTINGSTARTED from './GETTING-STARTED.md?raw';
+import './preview-styles.css'
 
 <Meta title="Getting Started" />
 
